--- a/4/views/00.mainmain.html
+++ b/4/views/00.mainmain.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="2.js"></script>
+    <ul style="background-color: lightgrey">
+      <li>lalal</li>
+      <li>lalal</li>
+      <li>lalal</li>
+    </ul>
+    <script src="/assets/js/learning/learning.js"></script>
   </body>
 </html>
