associated collections with user

--- a/4/views/auth-register.hbs
+++ b/4/views/auth-register.hbs
@@ -32,8 +32,8 @@
     <h1 class="text-center mb-5"><b>REGISTER</b></h1>
     <form id="register-form" class='auth-form' method="post" action='/auth-register'>
         <div class='form-field'>
-            <label for='name'>Name</label>
-            <input type='text' name="name" id='name' required />
+            <label for='username'>Username</label>
+            <input type='text' name="username" id='username' required />
         </div>
         <div class='form-field'>
             <label for='email'>Email</label>
