--- a/4/views/index.hbs
+++ b/4/views/index.hbs
@@ -4,19 +4,50 @@ Collections
 <div class="container-collections mx-5" onclick="">
     {{#each collections}}
 
-    <div class="collections">
-        <a href="">
-            <img src="/assets/img/task.png" width="2%" alt="">
+    <div class="collections m-0">
+        <a href="/collection/{{this.id}}">
+            <img src="/assets/img/task.png" width="10%" alt="">
             <div class="inside-collections" style="display: flex;">
                 <div style="display:block">
                     <h4>{{this.name}}</h4>
                     <span>2/9 Done</span>
                 </div>
-                <img src="/assets/img/clock.png" width="2%" height="2%" alt="">
+                <img src="/assets/img/clock.png" width="10%" height="2%" alt="">
             </div>
         </a>
     </div>
     {{/each}}
+    {{#if user}}
+    <div class="collections m-0">
+        <a href="" class="btn m-0" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="/assets/img/plus.png" alt="" width="40%">
+        </a>
+    </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Add New Collection</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="/addcollection" method="post">
+                        <div class="mb-3">
+                            <label for="recipient-name" class="col-form-label">Collection Name</label>
+                            <input type="text" class="form-control" name="name">
+                        </div>
+                        <div class="mb-3 text-end">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Add Collection</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    {{/if}}
     {{!-- <div class="collections">
         <img src="/assets/img/icon.jpg" width="2%" alt="">
         <div class="inside-collections" style="display: flex;">
