--- a/4/views/partials/layout.hbs
+++ b/4/views/partials/layout.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset='UTF-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-  <title>Personal Web | {{title}}</title>
+  <title>Final Task | {{title}}</title>
   <link rel='stylesheet' href='{{cssPath}}' />
   <link rel='icon' type='image/x-icon' href='{{iconPath}}' />
   <!-- Font Awesome -->
